--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: Xuejian Wang (Ron) # the website title (if blank, full name will be used instead)
-first_name: 
+first_name: Xuejian
 middle_name: 
-last_name: 
+last_name: Wang (Ron)
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
