--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,102 +2,96 @@
   type: map
   contents:
     - name: Full Name
-      value: Xuejian Wang (Ron)
-#    - name: Date of Birth
-#      value: 14th March 1879
-#    - name: Languages
-#      value: English, German
+      value: Albert Einstein
+    - name: Date of Birth
+      value: 14th March 1879
+    - name: Languages
+      value: English, German
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: Purdue University
-      year: 2023-now 
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1905
       description:
-        - Agricultural Economics
-        - Committee:
-          - Joseph Balagtas (Chair), Ezgi Cengiz, Bhagyashree Katare, Guy Tchuente, Steven Wu 
-#        - title: Description 3.
-#          contents:
-#            - Sub-description 1.
-#            - Sub-description 2.
-    - title: Master of Science
-      institution: University of Idaho
-      year: 2023
-      description: 
-        - Applied Economics 
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
+      description:
+        - Description 1.
+        - Description 2.
 
-    - title: Master of Economics
-      institution: Zhejiang University of Finance and Economics
-      year: 2021
-      description: 
-        - International Trade 
-
-    - title: Bachelor of Economics
-      institution: Yunnan University
-      year: 2017
-      description: 
-        - Economics
-
-
-- title: Academic Interests
-  type: nested_list
+- title: Experience
+  type: time_table
   contents:
-    - title: Food Economics, Health Economics, Industrial Organization, Food Marketing 
-#      items:
-#        - Description 1.
-#        - Description 2.
-#    - title: Topic 2.
-#      items:
-#        - Description 1.
-#        - Description 2.
+    - title: Professor of Theoretical Physics
+      institution: Institute for Advanced Study, Princeton University
+      year: 1933 - 1955
+      description:
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Visiting Professor
+      institution: California Institute of Technology, Pasadena, California, US
+      year: 1933
+      description:
+        - Description 1.
+        - Description 2.
 
+    - title: Director
+      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+      year: 1917-1933
 
-- title: Propessional Presentations and Conferences
+    - title: Professor of Theoretical Physics
+      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+      year: 1911 - 1917
+      description:
+
+    - title: Associate Professor of Theoretical Physics
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1909 - 1911
+
+- title: Open Source Projects
+  type: time_table
   contents:
-    - title:  2025 SEA Annual Meeting, Tampa, FL
-    - title:  2025 CES NA Annual Meeting, Ann Arbor, MI
-    - title:  2023 WAEA-CAES Annual Meeting, Whistler, British Columbia, Canada
-    - title:  2022 AAEA Annual Meeting, Anaheim, CA
+    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+      year: 2015-now
+      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 2022
+    - year: 1921
       items:
-        - Edward J. and Maud R. Iddings Research Fellowship, $4,000
-    - year: 2022
+        - Nobel Prize in Physics
+        - Matteucci Medal
+    - year: 2029
       items:
-        - AAEA travel award
+        - Max Planck Medal
 
-- title: Refereeing for Professional Journals
-  type: time_table
+- title: Academic Interests
+  type: nested_list
   contents:
-    - items:
-      - Agricultural Economics
-
-
-- title: Research Grants
-  type: time_table
-  contents:
-    - year: 2024
+    - title: Topic 1.
       items:
-        - Jim and Neta Hicks Graduate Student Small Grant, $7,500
-        - (My role, writing propsal and making budget)
+        - Description 1.
+        - Description 2.
+    - title: Topic 2.
+      items:
+        - Description 1.
+        - Description 2.
 
-
-
-- title: Skills
+- title: Other Interests
   type: list
   contents:
-#    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
-    - GIS, Latex, Machine learning, Python, R, Stata
-
-- title: Services
-  type: list
-  contents:
-#    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
-    - Social chair, Treasurer, Graduate Student Mentor, Graduate Student Organization, 
-      - Department of Agricultural Economics, Purdue University
-    - International Student Ambassador, International Programs Office, University of Idaho
+    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
