--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,39 @@
-plugins: ["@shopify/prettier-plugin-liquid"]
-printWidth: 150
-trailingComma: "es5"
+{
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": false,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "avoid",
+  "endOfLine": "lf",
+  "overrides": [
+    {
+      "files": "*.yml",
+      "options": {
+        "printWidth": 80,
+        "tabWidth": 2,
+        "useTabs": false
+      }
+    },
+    {
+      "files": "*.md",
+      "options": {
+        "printWidth": 80,
+        "proseWrap": "always"
+      }
+    },
+    {
+      "files": "*.scss",
+      "options": {
+        "printWidth": 80,
+        "tabWidth": 2,
+        "useTabs": false
+      }
+    }
+  ]
+}
